# kaede

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
assets/: kaede.ai
src/kaede/: __init__.py  __main__.py  client.py  huffman.py  models.py  process.py  server.py  websocket.py
src/kaede/api/: __init__.py  client.py  server.py
src/kaede/dns/: models.py
src/kaede/handler/: tcp.py
src/kaede/http/: __init__.py  cookies.py  date.py  fields.py  h1.py  h2.py  h3.py  headers.py  models.py  qpack.py  server.py  structured.py  url.py
src/kaede/quic/: __init__.py  connection.py  crypto.py  frame.py  recovery.py  stream.py  tls.py
src/kaede/tls/: openssl.py  record.py
tests/: test_conditional.py  test_cookies.py  test_fields.py  test_h1.py  test_h1_conformance.py  test_h1_e2e.py  test_h2.py  test_h2_e2e.py  test_h3.py  test_h3_e2e.py  test_headers.py  test_http_date.py  test_huffman.py  test_qpack.py  test_qpack_dynamic.py  test_quic_connection_id.py  test_quic_flow_control.py  test_quic_idle_timeout.py  test_quic_key_update.py  test_quic_stateless_reset.py  test_range.py  test_structured.py  test_url.py  test_websocket.py
